fixed scrollbar visuals

--- a/styles.css
+++ b/styles.css
@@ -63,20 +63,25 @@
     border-radius: 15px;
     overflow: hidden;
     padding: 15px;
+    
 }
 
 .textarea {
-    width: 100%;
-    height: 100%;
+    width: 94%;
+    height: 95%;
     border: none;
     outline: none;
     font-family: 'Times New Roman', Times, serif;
     font-size: medium;
     padding: 15px;
     line-height: 140%;
-    min-height: 100%;
+    min-height: 95%;
     resize: none;
     box-sizing: content-box;
+    margin: 1%;
+    padding-bottom: 3%;
+    overflow: auto;
+   
 }
 
 .blankCenterBox {
